--- a/Servicios_Jue/Servicios_Jue.csproj
+++ b/Servicios_Jue/Servicios_Jue.csproj
@@ -297,6 +297,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Clases\clsCypher.cs" />
     <Compile Include="Clases\clsLogin.cs" />
     <Compile Include="Clases\clsUsuario.cs" />
     <Compile Include="Clases\TokenGenerator.cs" />
